# heuristic-contest-template-rust

./: .gitignore  Cargo.toml  profiling.sh
.vim/: vimrc.lua
brain/: Cargo.toml
brain/src/: lib.rs
common/: Cargo.toml
common/src/: lib.rs  simann.rs
driver/: Cargo.toml
driver/src/: brain.rs  input.rs  main.rs  simann.rs
io/: Cargo.toml
io/src/: io.rs  lib.rs  macros.rs  source.rs  traits.rs
referee/: Cargo.toml
referee/src/: lib.rs
solution-01/: Cargo.toml
solution_01/: Cargo.toml
solution_01/src/: lib.rs
solutions/: Cargo.toml
solutions/src/: lib.rs  naive.rs
testing/: run_tests.py
types/: Cargo.toml
types/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: bundle.rs  main.rs  table.rs  test.rs
xtask/src/test/: ahc.rs  multi_test.rs
