[package]
name = "main"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
solution-01 = { path = "../solution-01" }
io = { path = "../io" }
common = { path = "../common" }
types = { path = "../types" }
