[package]
name = "solutions"
version = "0.1.0"
authors = ["statiolake <statiolake@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
io = { path = "../io" }
types = { path = "../types" }
itertools = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
