[package]
name = "solutions"
version = "0.1.0"
authors = ["statiolake <statiolake@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
io.workspace = true
referee.workspace = true
library.workspace = true

itertools.workspace = true
rand.workspace = true
# regex.workspace = true
# smallvec.workspace = true
# ordered-float.workspace = true

[features]
local = []
