[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
anyhow = "1.0.68"
#proc-macro2 = "1.0.49"
quote = "1.0.23"

io = { path = "../io" }
referee = { path = "../referee" }
solutions = { path = "../solutions" }
chrono = { version = "0.4.38", features = ["serde"] }
regex.workspace = true
serde = { version = "1.0.203", features = ["serde_derive", "derive"] }
serde_json = "1.0.117"
rayon = "1.10.0"

[dependencies.syn]
version = "1.0.107"
features = ["full", "parsing", "extra-traits", "visit-mut"]
