[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
io.workspace = true
referee.workspace = true
solutions.workspace = true

itertools = "0.12.0"
#proc-macro2 = "1.0.49"
quote = "1.0.23"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
rayon = "1.10.0"
unicode-width = "0.1.13"
once_cell = "1.19.0"
sha256 = "1.5.0"
regex = "1.11.1"
tempfile = "3.16.0"
toml = "0.8.20"
miette = { version = "7.5.0", features = ["fancy"] }
rand = "0.8.5"

[dependencies.syn]
version = "1.0.107"
features = ["full", "parsing", "extra-traits", "visit", "visit-mut"]
